kubefiles/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/ermias-biz/capstone-project-cluster-nginx:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
