kubefiles/flask_app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  labels:
    run: flask-app
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8000
#  - port : 443
#    name: https
#    protocol: TCP
#    targetPort: 8000
  selector:
    run: flask-app
  type: NodePort
#  loadBalancerIP: 34.149.74.164
