kubefiles/fanout-ingress-initial.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: capstone-project-prod-ip
    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
#  tls:
#  - hosts:
#      - the-ripple-effect.app
#      - app.the-ripple-effect.app
#      - api.the-ripple-effect.app
#    secretName: ingress-certificate-prod
  rules:
  - host: api.the-ripple-effect.app
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app
            port:
              number: 80
  - host: app.the-ripple-effect.app
    http:
      paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
